<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations1"
        android:title="@string/pref_title_social_recommendations1" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations2"
        android:title="@string/pref_title_social_recommendations2" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations3"
        android:title="@string/pref_title_social_recommendations3" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations4"
        android:title="@string/pref_title_social_recommendations4" />


</PreferenceScreen>
